--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,20 @@
 body{
 
-    color: red;
-    font-size: large;
     font-family: cursive;
-    text-align: center;
 }
+
+
+.container{
+
+    text-align: center;
+    border: 2px solid #000;
+    margin: 0px 5px 5px 5px;
+    padding: 5px;
+}
+
+.container h1{
+
+color: blue;
+
+}
+
