--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ body{
 
 .container{
 
-    text-align: center;
+    text-align: left;
     border: 2px solid #000;
     margin: 0px 5px 5px 5px;
     padding: 5px;
@@ -14,7 +14,18 @@ body{
 
 .container h1{
 
-color: blue;
+color: #000;
 
 }
+
+
+#cabecera{
+
+    color: #fff;
+    background-color: rgb(17, 30, 169);
+    text-align: left;
+    height: 50px;
+    width: 100%;
+}
+
 
