--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,3 +34,13 @@ color: #000;
 }
 
 
+#footer{
+
+    color: #fff;
+    background-color: rgb(130, 120, 120);
+    padding: 0.5em;
+    text-align: center;
+
+}
+
+
